Update main.yml testing with selfhostert agent

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   my_job:
     name: deploy to staging
-    runs-on: ubuntu-22.04
+    # runs-on: ubuntu-22.04
+    runs-on: cm-runner-1
 
     steps:
     - uses: actions/checkout@v4
